// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`COffcanvasTitle customize 1`] = `
<div>
  <div
    class="offcanvas-title bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays COffcanvasTitle component 1`] = `
<div>
  <h5
    class="offcanvas-title"
  />
</div>
`;
